tests/samples/positive/types/index_then_field_selector.ax
module index_then_field_selector;

struct Box {
    value: i32;
}

fn main() -> i32 {
    let boxes: [1]Box = [Box { value: 41 }];
    let index: usize = 0;
    return boxes[index].value - 41;
}
